projects/Always Sunny Picker/hasurak-webhook-auth/hasura-webhook-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["hasura-webhook-auth/hasura-webhook-auth"]'
    management.cattle.io/ui-managed: "true"
  creationTimestamp: "2022-12-31T03:35:11Z"
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:field.cattle.io/targetWorkloadIds: {}
          f:management.cattle.io/ui-managed: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"2b0708d9-401d-4bfb-bf82-fa20bb201704"}: {}
      f:spec:
        f:internalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":8000,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: rancher
    operation: Update
    time: "2022-12-31T03:35:11Z"
  name: hasura-webhook-auth
  namespace: hasura-webhook-auth
  ownerReferences:
  - apiVersion: apps/v1
    controller: true
    kind: Deployment
    name: hasura-webhook-auth
    uid: 2b0708d9-401d-4bfb-bf82-fa20bb201704
  resourceVersion: "4539522"
  uid: be3c517f-0626-46dc-9c41-b2d135998624
spec:
  clusterIP: 10.245.66.218
  clusterIPs:
  - 10.245.66.218
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8000tcp
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-hasura-webhook-auth-hasura-webhook-auth
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
